Можно поиграть - теперь и вдвоем! Добавлена инструкция в README Добавлена возможность генерировать слово для угадывания Багфикс

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Как играть?
 
 Одному:
+0. Создайте и Запустите виртуальное окружение в терминале.
 1. Запускаете файл main.py
 2. После запуска, в консоли вы увидите список, - в него будут добавляться буквы, которых нет в слове,
    а также выведется количество букв в слове.
